--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@material-ui/styles": "^4.11.4",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "2.0.4"
   },
   "scripts": {
